<resources>
    <string name="app_name">BillSplit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Accounts</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone">Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone umber</string>
    <string name="name">Name</string>
    <string name="button_signup">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="button_balances">Check Balances</string>
    <string name="button_transactions">Check Transactions</string>
    <string name="button_users">Check available Users</string>
    <string name="button_add">Add</string>
    <string name="tour_name">Tour Name</string>
    <string name="payer">Person who payed</string>
    <string name="note">Where and why</string>
    <string name="amount">Amount</string>
</resources>
